--- a/html/covid.html
+++ b/html/covid.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="index.html">Home</a> </li>
             <li><a href="accomodation.html">Accomodation</a> </li>
-            <li><a href="#">Places to visit</a> </li>
+            <li><a href="places.html">Activities</a> </li>
             <li><a href="#" class="active">Covid-19</a> </li>
         </ul>
     </div>
@@ -56,7 +56,7 @@
             <li><a href="https://www.gov.ie/en/campaigns/c36c85-covid-19-coronavirus/" target="_blank">Irish goverment - Covid-19</a></li>
             <li><a href="https://www.dkit.ie/about-dkit/coronavirus/" target="_blank">DKiT Coronavirus Updates</a></li>
             <li><a href="https://www.ecdc.europa.eu/en/covid-19-pandemic" target="_blank">European Centre for Disease Prevention and Control.</a></li>
-            <li><a href="https://www.youtube.com/watch?v=JK--RsEy4kI&ab_channel=RainbowCats" target="_blank">Funny cats oh no oh no oh no no no tiktok compilation (<em>just in just in case covid-19 makes you very depressed</em>).</a></li>
+            <li><a href="https://www.youtube.com/watch?v=JK--RsEy4kI&ab_channel=RainbowCats" target="_blank">Funny cats oh no oh no oh no no no tiktok compilation (<em>just in case covid-19 makes you very depressed</em>).</a></li>
         </ul>
     </div>
     <div class ="clear"></div>
